Add possibility to give layout for formview control component, make selectbutton take it's width from content when no dimensions given

--- a/stylesheets/flame.css.scss
+++ b/stylesheets/flame.css.scss
@@ -212,6 +212,9 @@ body {
         padding-left: 7px;
         text-align: left;
         font-size: $default-font-size;
+        white-space: nowrap;
+        margin-right: 23px;
+        overflow: hidden;
     }
 
     div {
