Change default font size to 13px

--- a/stylesheets/views/combo_box_view.css.scss
+++ b/stylesheets/views/combo_box_view.css.scss
@@ -13,7 +13,7 @@
         top: 0;
         padding: 0;
         border: 0;
-        font-size: $default-font-size;
+        font-size: 12px;
         @include no-gradient();
     }
 
