--- a/stylesheets/views/select_button_view.css.scss
+++ b/stylesheets/views/select_button_view.css.scss
@@ -4,7 +4,7 @@
     label {
         padding-left: 7px;
         text-align: left;
-        font-size: $default-font-size;
+        font-size: 12px;
         white-space: nowrap;
         margin-right: 23px;
         overflow: hidden;
